ingress/local-stack.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: localstack
  labels:
    app: localstack
spec:
  rules:
    - host: s3.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: localstack
              servicePort: 31000
    - host: aws.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: localstack
              servicePort: 32000
  tls:
    - hosts:
      - aws.localhost
      - s3.localhost
---
apiVersion: v1
kind: Service
metadata:
  name: localstack
spec:
  selector:
    app: localstack
  ports:
  - port: 32000
    protocol: TCP
    name: ui
    nodePort: 32000
  - port: 31000
    protocol: TCP
    name: s3
    nodePort: 31000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
spec:
  selector:
    matchLabels:
      app: localstack
  replicas: 1
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
      - name: localstack
        image: localstack/localstack-full:0.11.4
        ports:
        # exposing s3
        - containerPort: 31000
        # exposing the localstack ui
        - containerPort: 32000
